--- a/Ej/Indice/index.html
+++ b/Ej/Indice/index.html
@@ -1,163 +1,207 @@
 <!doctype html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Índice semanal – Rutinas</title>
-  <style>
-    body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111827}
-    .wrap{max-width:980px;margin:0 auto;padding:16px}
-    h1{margin:0 0 6px 0;font-size:20px}
-    .sub{margin:0 0 14px 0;color:#4b5563;font-size:13px}
-    .card{
-      background:#fff;border:1px solid #e5e7eb;border-radius:14px;
-      padding:14px; box-shadow:0 10px 24px rgba(0,0,0,.06)
-    }
-    table{width:100%;border-collapse:separate;border-spacing:0 10px}
-    th{font-size:12px;color:#6b7280;text-align:left;padding:0 10px}
-    td{
-      background:#ffffff;border:1px solid #e5e7eb;border-radius:12px;
-      padding:12px 10px; vertical-align:middle
-    }
-    .day{font-weight:bold;font-size:14px}
-    .plan{color:#374151;font-size:13px;line-height:1.25}
-    .btns{display:flex;flex-wrap:wrap;gap:8px}
-    a.btn{
-      display:inline-flex;align-items:center;gap:8px;
-      padding:10px 12px;border-radius:12px;
-      text-decoration:none;font-weight:bold;font-size:13px;
-      border:1px solid #d1d5db;background:#f9fafb;color:#111827
-    }
-    a.btn:hover{background:#eef2ff}
-    .tag{
-      display:inline-block;padding:4px 10px;border-radius:999px;
-      font-size:12px;border:1px solid #d1d5db;background:#f3f4f6;color:#374151
-    }
-    .tag.fuerza{background:#ecfdf5;border-color:#a7f3d0}
-    .tag.cardio{background:#eff6ff;border-color:#bfdbfe}
-    .tag.descanso{background:#fff7ed;border-color:#fed7aa}
-    .ico{width:18px;height:18px}
-    .foot{margin-top:12px;color:#6b7280;font-size:12px}
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Índice semanal de rutinas</title>
+
+<style>
+body{
+  margin:0;
+  font-family: Arial, Helvetica, sans-serif;
+  background:#f6f7fb;
+  color:#111;
+}
+.wrap{
+  max-width:900px;
+  margin:auto;
+  padding:16px;
+}
+h1{
+  margin:0 0 6px 0;
+  font-size:20px;
+}
+.sub{
+  margin:0 0 14px 0;
+  color:#555;
+  font-size:13px;
+}
+table{
+  width:100%;
+  border-collapse:separate;
+  border-spacing:0 10px;
+}
+th{
+  text-align:left;
+  font-size:12px;
+  color:#666;
+  padding:0 10px;
+}
+td{
+  background:#fff;
+  border:1px solid #ddd;
+  border-radius:12px;
+  padding:12px 10px;
+  vertical-align:middle;
+}
+.day{
+  font-weight:bold;
+  font-size:14px;
+}
+.plan{
+  font-size:13px;
+  color:#333;
+}
+.btns{
+  display:flex;
+  flex-wrap:wrap;
+  gap:8px;
+}
+a.btn{
+  text-decoration:none;
+  padding:10px 12px;
+  border-radius:10px;
+  border:1px solid #ccc;
+  background:#fafafa;
+  color:#111;
+  font-size:13px;
+  font-weight:bold;
+}
+a.btn:hover{
+  background:#eee;
+}
+.tag{
+  display:inline-block;
+  margin-top:4px;
+  padding:3px 8px;
+  font-size:11px;
+  border-radius:999px;
+  border:1px solid #ccc;
+  background:#f2f2f2;
+}
+.fuerza{background:#e8f8ef}
+.cardio{background:#eef4ff}
+.descanso{background:#fff3e0}
+</style>
 </head>
 
 <body>
-  <div class="wrap">
-    <h1>📅 Rutina por días (Índice)</h1>
-    <p class="sub">Haz clic en el libro que toca ese día. (Fondo claro, tipo cuaderno)</p>
+<div class="wrap">
+<h1>📅 Rutina semanal</h1>
+<p class="sub">Selecciona el libro que corresponde a cada día</p>
 
-    <div class="card">
-      <table>
-        <thead>
-          <tr>
-            <th style="width:120px;">Día</th>
-            <th>Qué toca</th>
-            <th style="width:360px;">Abrir libros</th>
-          </tr>
-        </thead>
+<table>
+<thead>
+<tr>
+  <th style="width:120px">Día</th>
+  <th>Rutina</th>
+  <th style="width:360px">Abrir</th>
+</tr>
+</thead>
 
-        <tbody>
-          <tr>
-            <td><div class="day">Lunes</div> <span class="tag fuerza">Fuerza</span></td>
-            <td class="plan">Piernas + Abdomen + Brazos/Pecho</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_piernas.html">
-                  <!-- pierna -->
-                  <svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M9 3c2 2 3 4 3 7v2l2 2v7h-3v-5l-2-2V10C9 8 8 6 7 5l2-2z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M14 14l3 2v5h-3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                  Piernas
-                </a>
-                <a class="btn" href="libro_abdominales.html">
-                  <!-- abdomen -->
-                  <svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                  Abdomen
-                </a>
-                <a class="btn" href="libro_brazos.html">
-                  <!-- brazos -->
-                  <svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M7 14c1-3 3-5 5-5h2c2 0 4 2 5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 14l-2 6h4l1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M18 14l2 6h-4l-1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-                  Brazos/Pecho
-                </a>
-              </div>
-            </td>
-          </tr>
+<tbody>
 
-          <tr>
-            <td><div class="day">Martes</div> <span class="tag cardio">Cardio</span></td>
-            <td class="plan">Cardio suave + Abdomen</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_abdominales.html">
-                  <svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                  Abdomen
-                </a>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td><div class="day">Miércoles</div> <span class="tag fuerza">Fuerza</span></td>
-            <td class="plan">Piernas + Abdomen + Brazos/Pecho</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_piernas.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M9 3c2 2 3 4 3 7v2l2 2v7h-3v-5l-2-2V10C9 8 8 6 7 5l2-2z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M14 14l3 2v5h-3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Piernas</a>
-                <a class="btn" href="libro_abdominales.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Abdomen</a>
-                <a class="btn" href="libro_brazos.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M7 14c1-3 3-5 5-5h2c2 0 4 2 5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 14l-2 6h4l1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M18 14l2 6h-4l-1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Brazos/Pecho</a>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td><div class="day">Jueves</div> <span class="tag cardio">Cardio</span></td>
-            <td class="plan">Cardio suave + Abdomen</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_abdominales.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Abdomen</a>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td><div class="day">Viernes</div> <span class="tag fuerza">Fuerza</span></td>
-            <td class="plan">Piernas + Abdomen + Brazos/Pecho</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_piernas.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M9 3c2 2 3 4 3 7v2l2 2v7h-3v-5l-2-2V10C9 8 8 6 7 5l2-2z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M14 14l3 2v5h-3" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Piernas</a>
-                <a class="btn" href="libro_abdominales.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Abdomen</a>
-                <a class="btn" href="libro_brazos.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M7 14c1-3 3-5 5-5h2c2 0 4 2 5 5" stroke="currentColor" stroke-width="2" stroke-linecap="round"/><path d="M6 14l-2 6h4l1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/><path d="M18 14l2 6h-4l-1-3" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>Brazos/Pecho</a>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td><div class="day">Sábado</div> <span class="tag cardio">Suave</span></td>
-            <td class="plan">Abdomen suave + respiración/movilidad</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="libro_abdominales.html"><svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M12 2c3 3 4 6 4 10s-1 7-4 10c-3-3-4-6-4-10S9 5 12 2z" stroke="currentColor" stroke-width="2"/><path d="M9 10h6M9 14h6" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>Abdomen</a>
-              </div>
-            </td>
-          </tr>
-
-          <tr>
-            <td><div class="day">Domingo</div> <span class="tag descanso">Descanso</span></td>
-            <td class="plan">Descanso (caminata suave opcional)</td>
-            <td>
-              <div class="btns">
-                <a class="btn" href="indice_semana.html">
-                  <svg class="ico" viewBox="0 0 24 24" fill="none"><path d="M8 17c6 0 10-4 10-10-6 0-10 4-10 10z" stroke="currentColor" stroke-width="2"/><path d="M6 18c0 2 2 4 4 4" stroke="currentColor" stroke-width="2" stroke-linecap="round"/></svg>
-                  Ver índice
-                </a>
-              </div>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-
-      <div class="foot">
-        Si tus archivos tienen otro nombre, cambia los <b>href</b> de los botones (por ejemplo: <b>libro_brazos.html</b>).
-      </div>
-    </div>
+<tr>
+<td>
+  <div class="day">Lunes</div>
+  <span class="tag fuerza">Fuerza</span>
+</td>
+<td class="plan">Piernas + Abdomen + Brazos</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
   </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Martes</div>
+  <span class="tag cardio">Suave</span>
+</td>
+<td class="plan">Abdomen + cuello</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+  </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Miércoles</div>
+  <span class="tag fuerza">Fuerza</span>
+</td>
+<td class="plan">Piernas + Abdomen + Brazos</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+  </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Jueves</div>
+  <span class="tag cardio">Suave</span>
+</td>
+<td class="plan">Abdomen + cuello</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+  </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Viernes</div>
+  <span class="tag fuerza">Fuerza</span>
+</td>
+<td class="plan">Piernas + Abdomen + Brazos</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+  </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Sábado</div>
+  <span class="tag cardio">Ligero</span>
+</td>
+<td class="plan">Abdomen suave + cuello</td>
+<td>
+  <div class="btns">
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+    <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+  </div>
+</td>
+</tr>
+
+<tr>
+<td>
+  <div class="day">Domingo</div>
+  <span class="tag descanso">Descanso</span>
+</td>
+<td class="plan">Descanso o caminata suave</td>
+<td>
+  —
+</td>
+</tr>
+
+</tbody>
+</table>
+
+</div>
 </body>
 </html>
