Update text in index.html for clarity

--- a/Ej/Indice/index.html
+++ b/Ej/Indice/index.html
@@ -88,7 +88,7 @@ a.btn:hover{
 <body>
 <div class="wrap">
 <h1>📅 Rutina semanal</h1>
-<p class="sub">Selecciona el libro que corresponde a cada día</p>
+<p class="sub">Selecciona el día  que corresponde </p>
 
 <table>
 <thead>
