Create index.html for abdominal workout routine

--- a/Ej/Abd/index.html
+++ b/Ej/Abd/index.html
@@ -1,1 +1,142 @@
+<!doctype html>
+<html lang="es">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Rutina – Abdomen</title>
+
+<style>
+body{
+  margin:0;
+  font-family: Arial, Helvetica, sans-serif;
+  background:#f6f7fb;
+  color:#111;
+}
+.wrap{
+  max-width:800px;
+  margin:auto;
+  padding:16px;
+}
+h1{
+  margin:0 0 6px 0;
+  font-size:20px;
+}
+.sub{
+  margin:0 0 14px 0;
+  color:#555;
+  font-size:13px;
+}
+.card{
+  background:#fff;
+  border:1px solid #ddd;
+  border-radius:14px;
+  padding:14px;
+  margin-bottom:14px;
+}
+h2{
+  margin:0 0 6px 0;
+  font-size:16px;
+}
+p{
+  margin:0 0 10px 0;
+  font-size:13px;
+  color:#333;
+}
+.imgbox{
+  border:2px dashed #ccc;
+  border-radius:12px;
+  height:250px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  margin-bottom:10px;
+  background:#fafafa;
+}
+.imgbox img{
+  width:100%;
+  height:250px;
+  object-fit:contain;
+}
+ol{
+  margin:0;
+  padding-left:18px;
+  font-size:13px;
+}
+li{
+  margin:6px 0;
+}
+.note{
+  font-size:12px;
+  color:#666;
+  margin-top:8px;
+}
+</style>
+</head>
+
+<body>
+<div class="wrap">
+
+<h1>Abdomen</h1>
+<p class="sub">Rutina segura para fortalecer sin dañar la columna</p>
+
+<!-- EJERCICIO 1 -->
+<div class="card">
+  <h2>1. Vacío abdominal (acostada)</h2>
+  <p>Activa el abdomen profundo y reduce la barriga.</p>
+
+  <div class="imgbox">
+    <img src="img/vacio_abdominal.jpg" alt="Vacío abdominal">
+  </div>
+
+  <ol>
+    <li>Acuéstate boca arriba.</li>
+    <li>Mete el ombligo hacia dentro.</li>
+    <li>Respira normal.</li>
+    <li>Mantén la contracción.</li>
+  </ol>
+
+  <p class="note"><b>3 × 20 segundos</b></p>
+</div>
+
+<!-- EJERCICIO 2 -->
+<div class="card">
+  <h2>2. Marcha abdominal acostada</h2>
+  <p>Fortalece el abdomen sin flexionar la columna.</p>
+
+  <div class="imgbox">
+    <img src="img/marcha_abdominal.jpg" alt="Marcha abdominal">
+  </div>
+
+  <ol>
+    <li>Acuéstate boca arriba.</li>
+    <li>Rodillas flexionadas.</li>
+    <li>Levanta un pie y baja.</li>
+    <li>Alterna piernas.</li>
+  </ol>
+
+  <p class="note"><b>3 × 10 por lado</b></p>
+</div>
+
+<!-- EJERCICIO 3 -->
+<div class="card">
+  <h2>3. Abdomen isométrico sentado</h2>
+  <p>Da firmeza al abdomen sin acostarte.</p>
+
+  <div class="imgbox">
+    <img src="img/abdominal_isometrico_sentado.jpg" alt="Abdomen isométrico sentado">
+  </div>
+
+  <ol>
+    <li>Siéntate derecha.</li>
+    <li>Mete el ombligo.</li>
+    <li>Aprieta sin moverte.</li>
+    <li>Respira normal.</li>
+  </ol>
+
+  <p class="note"><b>3 × 20 segundos</b></p>
+</div>
+
+</div>
+</body>
+</html>
 
