--- a/Ej/Indice/index.html
+++ b/Ej/Indice/index.html
@@ -3,67 +3,182 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Enfriamiento – Estiramientos</title>
+<title>Índice semanal – Rutinas</title>
 <style>
 body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111}
-.wrap{max-width:800px;margin:auto;padding:16px}
+.wrap{max-width:980px;margin:auto;padding:16px}
 h1{margin:0 0 6px 0;font-size:20px}
 .sub{margin:0 0 14px 0;color:#555;font-size:13px}
-.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px;margin-bottom:14px}
-h2{margin:0 0 6px 0;font-size:16px}
-p{margin:0 0 10px 0;font-size:13px;color:#333}
-.imgbox{border:2px dashed #ccc;border-radius:12px;height:250px;display:flex;align-items:center;justify-content:center;margin-bottom:10px;background:#fafafa}
-.imgbox img{width:100%;height:250px;object-fit:contain}
-ol{margin:0;padding-left:18px;font-size:13px}
-li{margin:6px 0}
-.note{font-size:12px;color:#666;margin-top:8px}
+.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px;box-shadow:0 10px 24px rgba(0,0,0,.06)}
+table{width:100%;border-collapse:separate;border-spacing:0 10px}
+th{text-align:left;font-size:12px;color:#666;padding:0 10px}
+td{background:#fff;border:1px solid #e5e7eb;border-radius:12px;padding:12px 10px;vertical-align:top}
+.day{font-weight:bold;font-size:14px}
+.plan{font-size:13px;color:#333;line-height:1.25}
+.btns{display:flex;flex-wrap:wrap;gap:8px;margin-top:8px}
+a.btn{text-decoration:none;padding:10px 12px;border-radius:10px;border:1px solid #ccc;background:#fafafa;color:#111;font-size:13px;font-weight:bold}
+a.btn:hover{background:#eee}
+.tag{display:inline-block;margin-top:4px;padding:3px 8px;font-size:11px;border-radius:999px;border:1px solid #ccc;background:#f2f2f2}
+.fuerza{background:#e8f8ef}
+.cardio{background:#eef4ff}
+.suave{background:#fff7ed}
+.descanso{background:#f3f4f6}
+.small{font-size:12px;color:#666;margin-top:10px}
 </style>
 </head>
 <body>
 <div class="wrap">
-<h1>Enfriamiento</h1>
-<p class="sub">Estiramientos (5–8 minutos) al terminar</p>
+  <h1>📅 Rutina semanal (con cuello diario)</h1>
+  <p class="sub">Orden fijo: <b>Calentamiento → Rutina del día → Cardio (según día) → Enfriamiento</b></p>
 
-<div class="card">
-  <h2>1. Pantorrilla</h2>
-  <p>De pie, estira gemelo contra pared.</p>
-  <div class="imgbox"><img src="img/pantorrilla.jpg" alt="Pantorrilla"></div>
-  <ol><li>Talón abajo.</li><li>30 s por lado.</li></ol>
-  <p class="note"><b>2 × 30 s por lado</b></p>
-</div>
+  <div class="card">
+    <table>
+      <thead>
+        <tr>
+          <th style="width:120px">Día</th>
+          <th>Qué toca</th>
+          <th style="width:420px">Abrir libros</th>
+        </tr>
+      </thead>
+      <tbody>
 
-<div class="card">
-  <h2>2. Cuádriceps</h2>
-  <p>De pie, toma el tobillo (suave).</p>
-  <div class="imgbox"><img src="img/cuadriceps.jpg" alt="Cuádriceps"></div>
-  <ol><li>Rodillas juntas.</li><li>30 s por lado.</li></ol>
-  <p class="note"><b>2 × 30 s por lado</b></p>
-</div>
+        <!-- Lunes -->
+        <tr>
+          <td><div class="day">Lunes</div><span class="tag fuerza">Fuerza</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
+            <b>Cardio:</b> Caminadora (suave).
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
 
-<div class="card">
-  <h2>3. Isquiotibiales</h2>
-  <p>Sentada, pierna extendida, inclina suave.</p>
-  <div class="imgbox"><img src="img/isquios.jpg" alt="Isquiotibiales"></div>
-  <ol><li>Espalda larga.</li><li>Sin rebotes.</li></ol>
-  <p class="note"><b>2 × 30 s por lado</b></p>
-</div>
+        <!-- Martes -->
+        <tr>
+          <td><div class="day">Martes</div><span class="tag cardio">Cardio</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Base:</b> Abdomen (suave).<br>
+            <b>Cardio:</b> Cicla recumbent.
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
 
-<div class="card">
-  <h2>4. Glúteo (figura 4)</h2>
-  <p>Acostada, tobillo sobre rodilla y acerca.</p>
-  <div class="imgbox"><img src="img/gluteo.jpg" alt="Glúteo"></div>
-  <ol><li>Suave.</li><li>Respira.</li></ol>
-  <p class="note"><b>2 × 30 s por lado</b></p>
-</div>
+        <!-- Miércoles -->
+        <tr>
+          <td><div class="day">Miércoles</div><span class="tag fuerza">Fuerza</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
+            <b>Cardio:</b> Miniescaladora (suave).
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
 
-<div class="card">
-  <h2>5. Pecho/hombro</h2>
-  <p>En marco de puerta, abre suave.</p>
-  <div class="imgbox"><img src="img/pecho.jpg" alt="Pecho"></div>
-  <ol><li>Sin dolor.</li><li>30 s.</li></ol>
-  <p class="note"><b>2 × 30 s</b></p>
-</div>
+        <!-- Jueves -->
+        <tr>
+          <td><div class="day">Jueves</div><span class="tag cardio">Cardio</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Base:</b> Abdomen (suave).<br>
+            <b>Cardio:</b> Saco de box (básico, sin saltos).
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
 
+        <!-- Viernes -->
+        <tr>
+          <td><div class="day">Viernes</div><span class="tag fuerza">Fuerza</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Fuerza:</b> Piernas + Abdomen + Brazos.<br>
+            <b>Cardio:</b> Caminadora (suave).
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Pi/">Piernas</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Brz/">Brazos</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
+
+        <!-- Sábado -->
+        <tr>
+          <td><div class="day">Sábado</div><span class="tag suave">Suave</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento.<br>
+            <b>Base:</b> Abdomen suave.<br>
+            <b>Cardio:</b> Cicla recumbent (muy suave).
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Abd/">Abdomen</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
+
+        <!-- Domingo -->
+        <tr>
+          <td><div class="day">Domingo</div><span class="tag descanso">Descanso</span></td>
+          <td class="plan">
+            <b>Siempre:</b> Cuello + Calentamiento + Enfriamiento (suave).<br>
+            <b>Opcional:</b> caminata suave.
+          </td>
+          <td>
+            <div class="btns">
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cal/">Calentamiento</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Cue/">Cuello</a>
+              <a class="btn" href="https://cgviviana.github.io/Juego_Prueba/Ej/Enf/">Enfriamiento</a>
+            </div>
+          </td>
+        </tr>
+
+      </tbody>
+    </table>
+
+    <div class="small">
+      Cardio alternado incluido: <b>caminadora / recumbent / miniescaladora / saco</b>.
+    </div>
+  </div>
 </div>
 </body>
 </html>
