Add warm-up exercises for mobility

--- a/Ej/Mov/index.html
+++ b/Ej/Mov/index.html
@@ -1,1 +1,70 @@
+<!doctype html>
+<html lang="es">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Calentamiento – Movilidad</title>
+<style>
+body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111}
+.wrap{max-width:800px;margin:auto;padding:16px}
+h1{margin:0 0 6px 0;font-size:20px}
+.sub{margin:0 0 14px 0;color:#555;font-size:13px}
+.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px;margin-bottom:14px}
+h2{margin:0 0 6px 0;font-size:16px}
+p{margin:0 0 10px 0;font-size:13px;color:#333}
+.imgbox{border:2px dashed #ccc;border-radius:12px;height:250px;display:flex;align-items:center;justify-content:center;margin-bottom:10px;background:#fafafa}
+.imgbox img{width:100%;height:250px;object-fit:contain}
+ol{margin:0;padding-left:18px;font-size:13px}
+li{margin:6px 0}
+.note{font-size:12px;color:#666;margin-top:8px}
+</style>
+</head>
+<body>
+<div class="wrap">
+<h1>Calentamiento</h1>
+<p class="sub">Movilidad articular (5–7 minutos) antes de cualquier rutina</p>
+
+<div class="card">
+  <h2>1. Tobillos (círculos)</h2>
+  <p>Sentada. 10 círculos por lado.</p>
+  <div class="imgbox"><img src="img/tobillos.jpg" alt="Tobillos"></div>
+  <ol><li>Círculos lentos.</li><li>Sin dolor.</li></ol>
+  <p class="note"><b>1 minuto</b></p>
+</div>
+
+<div class="card">
+  <h2>2. Rodillas (extiende y flexiona)</h2>
+  <p>Sentada. Estira y dobla la rodilla.</p>
+  <div class="imgbox"><img src="img/rodillas.jpg" alt="Rodillas"></div>
+  <ol><li>Sube y baja lento.</li><li>Sin bloquear la rodilla.</li></ol>
+  <p class="note"><b>1 minuto</b></p>
+</div>
+
+<div class="card">
+  <h2>3. Cadera (rodillas al pecho suave)</h2>
+  <p>Acostada. Lleva una rodilla al pecho y cambia.</p>
+  <div class="imgbox"><img src="img/cadera.jpg" alt="Cadera"></div>
+  <ol><li>Abrazo suave.</li><li>Respira normal.</li></ol>
+  <p class="note"><b>1–2 minutos</b></p>
+</div>
+
+<div class="card">
+  <h2>4. Hombros (círculos pequeños)</h2>
+  <p>De pie o sentada. 10 círculos adelante y atrás.</p>
+  <div class="imgbox"><img src="img/hombros.jpg" alt="Hombros"></div>
+  <ol><li>Movimiento pequeño.</li><li>Sin elevar los hombros.</li></ol>
+  <p class="note"><b>1 minuto</b></p>
+</div>
+
+<div class="card">
+  <h2>5. Respiración (prepara columna)</h2>
+  <p>Acostada. Inhala por nariz, exhala largo.</p>
+  <div class="imgbox"><img src="img/respiracion.jpg" alt="Respiración"></div>
+  <ol><li>Inhala 3–4 s.</li><li>Exhala 5–6 s.</li></ol>
+  <p class="note"><b>1 minuto</b></p>
+</div>
+
+</div>
+</body>
+</html>
 
