Add stretching routine details to index.html

--- a/Ej/Esti/index.html
+++ b/Ej/Esti/index.html
@@ -1,1 +1,70 @@
+<!doctype html>
+<html lang="es">
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Enfriamiento – Estiramientos</title>
+<style>
+body{margin:0;font-family:Arial,Helvetica,sans-serif;background:#f6f7fb;color:#111}
+.wrap{max-width:800px;margin:auto;padding:16px}
+h1{margin:0 0 6px 0;font-size:20px}
+.sub{margin:0 0 14px 0;color:#555;font-size:13px}
+.card{background:#fff;border:1px solid #ddd;border-radius:14px;padding:14px;margin-bottom:14px}
+h2{margin:0 0 6px 0;font-size:16px}
+p{margin:0 0 10px 0;font-size:13px;color:#333}
+.imgbox{border:2px dashed #ccc;border-radius:12px;height:250px;display:flex;align-items:center;justify-content:center;margin-bottom:10px;background:#fafafa}
+.imgbox img{width:100%;height:250px;object-fit:contain}
+ol{margin:0;padding-left:18px;font-size:13px}
+li{margin:6px 0}
+.note{font-size:12px;color:#666;margin-top:8px}
+</style>
+</head>
+<body>
+<div class="wrap">
+<h1>Enfriamiento</h1>
+<p class="sub">Estiramientos (5–8 minutos) al terminar</p>
+
+<div class="card">
+  <h2>1. Pantorrilla</h2>
+  <p>De pie, estira gemelo contra pared.</p>
+  <div class="imgbox"><img src="img/pantorrilla.jpg" alt="Pantorrilla"></div>
+  <ol><li>Talón abajo.</li><li>30 s por lado.</li></ol>
+  <p class="note"><b>2 × 30 s por lado</b></p>
+</div>
+
+<div class="card">
+  <h2>2. Cuádriceps</h2>
+  <p>De pie, toma el tobillo (suave).</p>
+  <div class="imgbox"><img src="img/cuadriceps.jpg" alt="Cuádriceps"></div>
+  <ol><li>Rodillas juntas.</li><li>30 s por lado.</li></ol>
+  <p class="note"><b>2 × 30 s por lado</b></p>
+</div>
+
+<div class="card">
+  <h2>3. Isquiotibiales</h2>
+  <p>Sentada, pierna extendida, inclina suave.</p>
+  <div class="imgbox"><img src="img/isquios.jpg" alt="Isquiotibiales"></div>
+  <ol><li>Espalda larga.</li><li>Sin rebotes.</li></ol>
+  <p class="note"><b>2 × 30 s por lado</b></p>
+</div>
+
+<div class="card">
+  <h2>4. Glúteo (figura 4)</h2>
+  <p>Acostada, tobillo sobre rodilla y acerca.</p>
+  <div class="imgbox"><img src="img/gluteo.jpg" alt="Glúteo"></div>
+  <ol><li>Suave.</li><li>Respira.</li></ol>
+  <p class="note"><b>2 × 30 s por lado</b></p>
+</div>
+
+<div class="card">
+  <h2>5. Pecho/hombro</h2>
+  <p>En marco de puerta, abre suave.</p>
+  <div class="imgbox"><img src="img/pecho.jpg" alt="Pecho"></div>
+  <ol><li>Sin dolor.</li><li>30 s.</li></ol>
+  <p class="note"><b>2 × 30 s</b></p>
+</div>
+
+</div>
+</body>
+</html>
 
